antlr/QuillParser.py
# Generated from Quill.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class QuillParser(Parser):
    grammarFileName = "Quill.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "';'", "','", "'_'", "':'", "'='", "'if'",
                    "'{'", "'}'", "'else'", "'for'", "'in'", "'while'",
                    "'readLine()'", "'print'", "'('", "')'", "'=='", "'<='",
                    "'<'", "'>'", "'>='", "'!='", "'+'", "'-'", "'*'",
                    "'/'", "'^'", "'var'", "'let'", "'Int'", "'Float'",
                    "'Bool'", "'...'", "'..<'", "'.'", "'true'", "'false'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "COMMENT", "LETTER", "UNICODE_SYMBOL",
                     "DIGIT", "NEWLINE", "WS"]

    RULE_program = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_declaration = 3
    RULE_ident = 4
    RULE_declarationExpression = 5
    RULE_assign = 6
    RULE_ifStatement = 7
    RULE_ifTail = 8
    RULE_forStatement = 9
    RULE_rangeExpr = 10
    RULE_whileStatement = 11
    RULE_inp = 12
    RULE_out = 13
    RULE_expression = 14
    RULE_relOp = 15
    RULE_arithmExpression = 16
    RULE_term = 17
    RULE_exponent = 18
    RULE_factor = 19
    RULE_constant = 20
    RULE_declarationKeyword = 21
    RULE_sign = 22
    RULE_type = 23
    RULE_rangeOp = 24
    RULE_intNumb = 25
    RULE_floatNumb = 26
    RULE_unsignedInt = 27
    RULE_unsignedFloat = 28
    RULE_boolConst = 29

    ruleNames = ["program", "statementList", "statement", "declaration",
                 "ident", "declarationExpression", "assign", "ifStatement",
                 "ifTail", "forStatement", "rangeExpr", "whileStatement",
                 "inp", "out", "expression", "relOp", "arithmExpression",
                 "term", "exponent", "factor", "constant", "declarationKeyword",
                 "sign", "type", "rangeOp", "intNumb", "floatNumb", "unsignedInt",
                 "unsignedFloat", "boolConst"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    COMMENT = 38
    LETTER = 39
    UNICODE_SYMBOL = 40
    DIGIT = 41
    NEWLINE = 42
    WS = 43

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(QuillParser.StatementListContext, 0)

        def EOF(self):
            return self.getToken(QuillParser.EOF, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):

        localctx = QuillParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.statementList()
            self.state = 61
            self.match(QuillParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuillParser.StatementContext, i)

        def COMMENT(self, i: int = None):
            if i is None:
                return self.getTokens(QuillParser.COMMENT)
            else:
                return self.getToken(QuillParser.COMMENT, i)

        def getRuleIndex(self):
            return QuillParser.RULE_statementList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatementList"):
                listener.enterStatementList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatementList"):
                listener.exitStatementList(self)

    def statementList(self):

        localctx = QuillParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6322997187656) != 0):
                self.state = 65
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
                if la_ == 1:
                    self.state = 63
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 64
                    self.match(QuillParser.COMMENT)
                    pass

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(QuillParser.DeclarationContext, 0)

        def assign(self):
            return self.getTypedRuleContext(QuillParser.AssignContext, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(QuillParser.IfStatementContext, 0)

        def forStatement(self):
            return self.getTypedRuleContext(QuillParser.ForStatementContext, 0)

        def whileStatement(self):
            return self.getTypedRuleContext(QuillParser.WhileStatementContext, 0)

        def COMMENT(self):
            return self.getToken(QuillParser.COMMENT, 0)

        def out(self):
            return self.getTypedRuleContext(QuillParser.OutContext, 0)

        def NEWLINE(self):
            return self.getToken(QuillParser.NEWLINE, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

    def statement(self):

        localctx = QuillParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0  # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.declaration()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 1:
                    self.state = 71
                    self.match(QuillParser.T__0)

                pass
            elif token in [3, 39, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.assign()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 1:
                    self.state = 75
                    self.match(QuillParser.T__0)

                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.ifStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.forStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.whileStatement()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.match(QuillParser.COMMENT)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.out()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 1:
                    self.state = 83
                    self.match(QuillParser.T__0)

                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.match(QuillParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationKeyword(self):
            return self.getTypedRuleContext(QuillParser.DeclarationKeywordContext, 0)

        def ident(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.IdentContext)
            else:
                return self.getTypedRuleContext(QuillParser.IdentContext, i)

        def declarationExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.DeclarationExpressionContext)
            else:
                return self.getTypedRuleContext(QuillParser.DeclarationExpressionContext, i)

        def getRuleIndex(self):
            return QuillParser.RULE_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)

    def declaration(self):

        localctx = QuillParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.declarationKeyword()
            self.state = 90
            self.ident()
            self.state = 91
            self.declarationExpression()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 2:
                self.state = 92
                self.match(QuillParser.T__1)
                self.state = 93
                self.ident()
                self.state = 94
                self.declarationExpression()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i: int = None):
            if i is None:
                return self.getTokens(QuillParser.LETTER)
            else:
                return self.getToken(QuillParser.LETTER, i)

        def UNICODE_SYMBOL(self, i: int = None):
            if i is None:
                return self.getTokens(QuillParser.UNICODE_SYMBOL)
            else:
                return self.getToken(QuillParser.UNICODE_SYMBOL, i)

        def DIGIT(self, i: int = None):
            if i is None:
                return self.getTokens(QuillParser.DIGIT)
            else:
                return self.getToken(QuillParser.DIGIT, i)

        def getRuleIndex(self):
            return QuillParser.RULE_ident

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdent"):
                listener.enterIdent(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdent"):
                listener.exitIdent(self)

    def ident(self):

        localctx = QuillParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ident)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1649267441672) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 102
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3848290697224) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(QuillParser.ExpressionContext, 0)

        def inp(self):
            return self.getTypedRuleContext(QuillParser.InpContext, 0)

        def type_(self):
            return self.getTypedRuleContext(QuillParser.TypeContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_declarationExpression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclarationExpression"):
                listener.enterDeclarationExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclarationExpression"):
                listener.exitDeclarationExpression(self)

    def declarationExpression(self):

        localctx = QuillParser.DeclarationExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declarationExpression)
        self._la = 0  # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 10, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 4:
                    self.state = 108
                    self.match(QuillParser.T__3)
                    self.state = 109
                    self.type_()

                self.state = 112
                self.match(QuillParser.T__4)
                self.state = 115
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 15, 23, 24, 36, 37, 39, 40, 41]:
                    self.state = 113
                    self.expression()
                    pass
                elif token in [13]:
                    self.state = 114
                    self.inp()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(QuillParser.T__3)
                self.state = 118
                self.type_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(QuillParser.IdentContext, 0)

        def expression(self):
            return self.getTypedRuleContext(QuillParser.ExpressionContext, 0)

        def inp(self):
            return self.getTypedRuleContext(QuillParser.InpContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_assign

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssign"):
                listener.enterAssign(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssign"):
                listener.exitAssign(self)

    def assign(self):

        localctx = QuillParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.ident()
            self.state = 122
            self.match(QuillParser.T__4)
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 15, 23, 24, 36, 37, 39, 40, 41]:
                self.state = 123
                self.expression()
                pass
            elif token in [13]:
                self.state = 124
                self.inp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(QuillParser.ExpressionContext, 0)

        def statementList(self):
            return self.getTypedRuleContext(QuillParser.StatementListContext, 0)

        def ifTail(self):
            return self.getTypedRuleContext(QuillParser.IfTailContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_ifStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfStatement"):
                listener.enterIfStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfStatement"):
                listener.exitIfStatement(self)

    def ifStatement(self):

        localctx = QuillParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(QuillParser.T__5)
            self.state = 128
            self.expression()
            self.state = 129
            self.match(QuillParser.T__6)
            self.state = 130
            self.statementList()
            self.state = 131
            self.match(QuillParser.T__7)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 9:
                self.state = 132
                self.ifTail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfTailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(QuillParser.IfStatementContext, 0)

        def statementList(self):
            return self.getTypedRuleContext(QuillParser.StatementListContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_ifTail

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfTail"):
                listener.enterIfTail(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfTail"):
                listener.exitIfTail(self)

    def ifTail(self):

        localctx = QuillParser.IfTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifTail)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(QuillParser.T__8)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.state = 136
                self.match(QuillParser.T__6)
                self.state = 137
                self.statementList()
                self.state = 138
                self.match(QuillParser.T__7)
                pass
            elif token in [6]:
                self.state = 140
                self.ifStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(QuillParser.IdentContext, 0)

        def rangeExpr(self):
            return self.getTypedRuleContext(QuillParser.RangeExprContext, 0)

        def statementList(self):
            return self.getTypedRuleContext(QuillParser.StatementListContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_forStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterForStatement"):
                listener.enterForStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitForStatement"):
                listener.exitForStatement(self)

    def forStatement(self):

        localctx = QuillParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(QuillParser.T__9)
            self.state = 144
            self.ident()
            self.state = 145
            self.match(QuillParser.T__10)
            self.state = 146
            self.rangeExpr()
            self.state = 147
            self.match(QuillParser.T__6)
            self.state = 148
            self.statementList()
            self.state = 149
            self.match(QuillParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(QuillParser.ExpressionContext, i)

        def rangeOp(self):
            return self.getTypedRuleContext(QuillParser.RangeOpContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_rangeExpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRangeExpr"):
                listener.enterRangeExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRangeExpr"):
                listener.exitRangeExpr(self)

    def rangeExpr(self):

        localctx = QuillParser.RangeExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rangeExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.expression()
            self.state = 152
            self.rangeOp()
            self.state = 153
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(QuillParser.ExpressionContext, 0)

        def statementList(self):
            return self.getTypedRuleContext(QuillParser.StatementListContext, 0)

        def getRuleIndex(self):
            return QuillParser.RULE_whileStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhileStatement"):
                listener.enterWhileStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhileStatement"):
                listener.exitWhileStatement(self)

    def whileStatement(self):

        localctx = QuillParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(QuillParser.T__11)
            self.state = 156
            self.expression()
            self.state = 157
            self.match(QuillParser.T__6)
            self.state = 158
            self.statementList()
            self.state = 159
            self.match(QuillParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return QuillParser.RULE_inp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInp"):
                listener.enterInp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInp"):
                listener.exitInp(self)

    def inp(self):

        localctx = QuillParser.InpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(QuillParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(QuillParser.ExpressionContext, i)

        def getRuleIndex(self):
            return QuillParser.RULE_out

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOut"):
                listener.enterOut(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOut"):
                listener.exitOut(self)

    def out(self):

        localctx = QuillParser.OutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_out)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(QuillParser.T__13)
            self.state = 164
            self.match(QuillParser.T__14)
            self.state = 165
            self.expression()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 2:
                self.state = 166
                self.match(QuillParser.T__1)
                self.state = 167
                self.expression()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self.match(QuillParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.ArithmExpressionContext)
            else:
                return self.getTypedRuleContext(QuillParser.ArithmExpressionContext, i)

        def relOp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuillParser.RelOpContext)
            else:
                return self.getTypedRuleContext(QuillParser.RelOpContext, i)

        def getRuleIndex(self):
            return QuillParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

    def expression(self):

        localctx = QuillParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.arithmExpression()
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0):
                self.state = 176
                self.relOp()
                self.state = 177
                self.arithmExpression()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return QuillParser.RULE_relOp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRelOp"):
                listener.enterRelOp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRelOp"):
                listener.exitRelOp(self)

    def relOp(self):

        localctx = QuillParser.RelOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_relOp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
